[udpate] list of countries

--- a/sources/styles/app.css
+++ b/sources/styles/app.css
@@ -1,31 +1,17 @@
-/* body{
-	background: #F2EFEA;
+/* countries list */
+.flag{
+	height:42px;
+	width:42px;
+	margin:14px 20px 14px 0px;
+	float:left;
 }
-div.country_flag{
-	width: 120px;
-	float: left;
+.text{
+	margin-top:6px;
 }
-
-div.country_flag img{
-	border: none;
+.country_name{
+	font-weight:500;
 }
-.webix_layout_space, .webix_layout_wide, .webix_layout_accordion{
-	background: url(common/bg.jpg);
+.country_name, .country_area, .capital{
+	display:block;
+	line-height:20px;
 }
-
-div.country_info span{
-	display: block;
-	width: 64px;
-	font-weight: bold;
-	float: left;
-}
-.country_info, .country_flag{
-	padding:8px;
-	line-height: 21px;
-}
-.bigHeader .webix_accordionitem_label{
-	line-height: 45px;
-}
-.bigHeader .webix_accordionitem_button{
-	margin-top: 17px;
-} */
